--- a/css/heading.css
+++ b/css/heading.css
@@ -1,6 +1,8 @@
 .tagline-section{
-    padding-left: 1em;
-    background-image: linear-gradient(to right, rgb(0, 0, 0) , rgb(167, 167, 167));
+    
+    padding-left: 1em;;
+    margin-top: 3rem;
+    background-image: linear-gradient(to right, rgb(0, 0, 0) , rgb(253, 140, 65));
 }
 
 .tagline{
@@ -10,9 +12,9 @@
 #tag_image{
     padding: 10px;
     object-fit: cover;
-    width: 100%;
+    width: 102%;
     border-radius: 15px;
-    height: 20rem;
+    height: 22rem;
 }
 
 #navbar{
@@ -24,7 +26,7 @@
 #home-page-img{
     
     color: white;
-    padding: 20px;
+    padding: 10px;
 
     object-fit: cover;
     width: 100%;
@@ -46,4 +48,25 @@
 #register_button::after{
     background-color: #c1ffdd;
     color: black;
+}
+
+
+
+@media only screen and (max-width: 600px) {
+
+    .tagline-section{
+        padding-left: 0em;
+        padding-right: 0.3rem;
+        background-image: linear-gradient(to right, rgb(0, 0, 0) , rgb(51, 51, 51));
+    }
+
+    #tag_image{
+        padding: 1px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        object-fit: cover;
+        width: 102%;
+        border-radius: 15px;
+        height: 14rem;
+    }
 }
